Correct the titles

--- a/Base_de_Datos.ipynb
+++ b/Base_de_Datos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEM1bORXbA8C/EA65N+bvj",
+      "authorship_tag": "ABX9TyPBcsjOPsuIBMDlE3Ic2rye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1285,7 +1285,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Reporte Analisis"
+        "#Reporte Analisis ll"
       ],
       "metadata": {
         "id": "gQWe_5oe1EVe"
@@ -3227,6 +3227,15 @@
           "execution_count": 40
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# informacion extra sobre la base de datos"
+      ],
+      "metadata": {
+        "id": "Fym3S1KM8BG9"
+      }
     },
     {
       "cell_type": "code",
