Terms for learn

--- a/Base_de_Datos.ipynb
+++ b/Base_de_Datos.ipynb
@@ -6648,7 +6648,7 @@
         "id": "LWeSMp0Apj9l",
         "outputId": "f5c81521-d3d3-4b2d-a423-1bf53ea9a9f3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7002,7 +7002,7 @@
         "id": "ljE_L1x7opSk",
         "outputId": "cb14a695-cf4e-46a0-e3d8-95d3a4c4a0e0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7387,7 +7387,7 @@
         "id": "59ZsXClOowZI",
         "outputId": "0ecd2725-d9cb-4bfb-c702-544c81cfea0a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7414,7 +7414,7 @@
         "id": "dfg9n2TdpVRn",
         "outputId": "b45c8ac6-b3c0-46e0-a74b-7a66d270f3cb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7566,7 +7566,7 @@
         },
         "outputId": "a292ad58-b81a-4d02-c8b6-2795f7d7bbbc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7865,7 +7865,7 @@
         "id": "XvlWppwjlRIO",
         "outputId": "109ce8ce-5bf1-4569-c8fd-21e66f769604"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7887,7 +7887,7 @@
       "metadata": {
         "id": "JVykLAFFljUd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7907,7 +7907,7 @@
         "id": "3KhEWTM8mF75",
         "outputId": "d0d593a6-1625-478a-9543-56c9ece4433a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7933,7 +7933,7 @@
         "id": "f8LEto-AmVWI",
         "outputId": "576defe0-c0d8-4750-fdd0-570d300aa6c9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7956,7 +7956,7 @@
       "metadata": {
         "id": "BT0XoSH8msy_"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7971,7 +7971,7 @@
         "id": "1shxwuWQnCIc",
         "outputId": "ea746e9f-325b-42db-fd08-ee18d4483a70"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7997,7 +7997,7 @@
         "id": "ZX7ubTLNnJvI",
         "outputId": "57b9b8d6-1899-4e26-f0d2-d1c498ee58cc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8024,7 +8024,7 @@
         "id": "WEisE8BcnMrd",
         "outputId": "42d5a583-c3a4-4200-d915-d3c930f63839"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8058,8 +8058,37 @@
       "metadata": {
         "id": "sltuF2jxnT7x"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "En esta aula, aprendimos:\n",
+        "\n",
+        "Tratamiento de datos faltantes\n",
+        "\n",
+        "Cómo identificar valores nulos (missing values)\n",
+        "\n",
+        "El método isnull() indica si los valores son nulos\n",
+        "\n",
+        "El método notnull() devuelve lo opuesto al método isnull()\n",
+        "\n",
+        "El método info() también es una forma de verificar la presencia de valores nulos\n",
+        "\n",
+        "Cómo eliminar valores nulos con el método dropna()\n",
+        "\n",
+        "Tratamiento condicional\n",
+        "\n",
+        "Inversión de valores booleanos con ~\n",
+        "\n",
+        "Cómo reemplazar los missing values con el método fillna()\n",
+        "\n",
+        "Métodos de interpolación: ffill, bfill y mean()"
+      ],
+      "metadata": {
+        "id": "WndyMjSOu9kk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -8088,7 +8117,7 @@
       "metadata": {
         "id": "J26DW6VjoPrA"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8104,7 +8133,7 @@
         "id": "fOvI8VYKpxjw",
         "outputId": "a19c46b4-c4ac-471b-e0dc-9d5afab8601e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8314,7 +8343,7 @@
         "id": "6pPxoBkZp4Jj",
         "outputId": "b41fc908-0ad4-4b7f-aa5c-73f2e6a2479c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8501,7 +8530,7 @@
         "id": "tjUwvAYQp88q",
         "outputId": "37839989-1e71-49eb-fef0-253b5946a0f7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8688,7 +8717,7 @@
         "id": "7rFo7jpGqGgf",
         "outputId": "e69d0b92-8f17-4a84-88a9-51293a9a755d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8872,7 +8901,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBKMQ2pVULnE7eBfA+ex1I",
+      "authorship_tag": "ABX9TyO/3Wn8QUz9ge7k1uH8+HbR",
       "include_colab_link": true
     },
     "kernelspec": {
